# poly-bech

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  justfile
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.polybench/rust/f16910c955bd935b/: Cargo.toml
.polybench/rust/f16910c955bd935b/src/: main.rs
cli/: init_t3.rs  lib.rs  lsp_main.rs  main.rs  ui.rs  version_check.rs  welcome.rs
crates/poly-bench-lsp/: Cargo.toml
crates/poly-bench-lsp/src/: backend.rs  completion.rs  diagnostics.rs  document.rs  gopls_client.rs  hover.rs  lib.rs  lsp_client.rs  rust_analyzer_client.rs  semantic_tokens.rs  tsserver_client.rs  virtual_files.rs
crates/poly-bench-lsp/src/embedded/: go_bridge.rs  mod.rs  rust_bridge.rs  ts_bridge.rs
crates/poly-bench-project/: Cargo.toml
crates/poly-bench-project/src/: build.rs  deps.rs  init.rs  lib.rs  manifest.rs  templates.rs  terminal.rs
crates/poly-bench-runtime/: Cargo.toml
crates/poly-bench-runtime/src/: lib.rs  measurement.rs  traits.rs
crates/poly-bench-runtime/src/go/: codegen.rs  compiler.rs  executor.rs  mod.rs  shared.rs
crates/poly-bench-runtime/src/js/: builtins.rs  codegen.rs  mod.rs  transpiler.rs  v8_runtime.rs
crates/poly-bench-runtime/src/rust/: codegen.rs  executor.rs  shared.rs
docs/: ADDING_A_RUNTIME.md  CHARTING_IMPROVEMENTS.md  LSP_RUNTIME_SPEC.md  LSP_V2_MIGRATION.md  biome.json  next.config.ts  package.json
examples/: .gitignore  Makefile  abi.bench  deps.go  go.mod  go.sum  minimal.bench  package-lock.json  package.json  simple.bench
extensions/: README.md
install/: vercel.json
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: external_deps.rs  init_runtime_dirs.rs  lsp_csharp.rs  lsp_gopls.rs  lsp_pyright.rs  lsp_rust_analyzer.rs  lsp_typescript.rs  lsp_zls.rs  runtime_validation.rs
poly-bench-dsl/: Cargo.toml
poly-bench-dsl/src/: ast.rs  chart_params.rs  error.rs  formatter.rs  lexer.rs  lib.rs  parser.rs  tokens.rs  validate.rs
poly-bench-executor/: Cargo.toml
poly-bench-executor/src/: anvil.rs  comparison.rs  compile_cache.rs  lib.rs  scheduler.rs  validation.rs  workspace.rs
poly-bench-executor/tests/: scheduler_strict_legacy.rs
poly-bench-grammar/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
poly-bench-grammar/bindings/c/: tree-sitter-polybench.h  tree-sitter-polybench.pc.in
poly-bench-grammar/bindings/go/: binding.go  binding_test.go  go.mod
poly-bench-grammar/bindings/node/: binding.cc
poly-bench-grammar/bindings/python/tree_sitter_polybench/: __init__.py  binding.c
poly-bench-grammar/bindings/rust/: build.rs  lib.rs
poly-bench-grammar/queries/: highlights.scm  injections.scm  locals.scm
poly-bench-grammar/src/: grammar.json  node-types.json  parser.c  scanner.c
poly-bench-grammar/test/corpus/: basic.txt  charting.txt  embedded_code.txt  error_recovery.txt  fixtures.txt  global_setup.txt  hooks.txt  setup.txt
poly-bench-ir/: Cargo.toml
poly-bench-ir-traits/: Cargo.toml
poly-bench-ir/src/: fixtures.rs  imports.rs  lib.rs  lower.rs  types.rs
poly-bench-lsp-traits/: Cargo.toml
poly-bench-lsp-traits/src/: context.rs  diagnostics.rs  embedded.rs  lib.rs  lsp_client.rs  position.rs  virtual_file.rs  virtual_file_core.rs
poly-bench-lsp-v2/: Cargo.toml
poly-bench-lsp-v2/src/: diagnostics.rs  document.rs  embedded.rs  embedded_diagnostic_context.rs  embedded_hover_context.rs  formatter.rs  gopls_client.rs  hover.rs  hover_cache.rs  hover_providers.rs  lib.rs  lsp_client.rs  pyright_client.rs  rust_analyzer_client.rs  semantic_tokens.rs  server.rs  tsserver_client.rs  virtual_files.rs
poly-bench-lsp-v2/src/embedded_diagnostics/: go.rs  mod.rs  python.rs  rust.rs  typescript.rs
poly-bench-lsp-v2/tests/: integration.rs
poly-bench-project/: Cargo.toml
poly-bench-project/fixtures/sort/: sort_1000.hex  sort_400.hex  sort_600.hex
poly-bench-project/src/: build.rs  deps.rs  detectors.rs  error.rs  init.rs  lib.rs  manifest.rs  runtime_check.rs  runtime_installer.rs  shim.rs  templates.rs  terminal.rs  toolchain.rs
poly-bench-reporter/: Cargo.toml
poly-bench-reporter/src/: chart_executor.rs  console.rs  lib.rs  markdown.rs
poly-bench-reporter/src/charts/: bar_chart.rs  line_chart.rs  mod.rs  pie_chart.rs  regression.rs  scaling_chart.rs  speedup_chart.rs  table.rs
poly-bench-runtime/: Cargo.toml
poly-bench-runtime-traits/: Cargo.toml
poly-bench-runtime-traits/src/: config.rs  lang_display.rs  lib.rs  plugin.rs  stdlib_provider.rs  traits.rs
poly-bench-runtime/runtimes/runtimes-zig/: Cargo.toml
poly-bench-runtime/runtimes/runtimes-zig/src/: embedded_diagnostics.rs  error_mapping.rs  executor.rs  helper_extractor.rs  hover.rs  import_extractor.rs  lib.rs  plugin.rs  project.rs  stdlib.rs  virtual_file.rs  zls_client.rs
poly-bench-runtime/runtimes/runtimes-zig/tests/: execution_snapshot.rs
poly-bench-stdlib/: Cargo.toml
poly-bench-stdlib/src/: anvil.rs  charting.rs  constants.rs  lib.rs
poly-bench-syntax/: Cargo.toml
poly-bench-syntax/src/: convert.rs  incremental.rs  lib.rs  partial_ast.rs  tree.rs
poly-bench-traits/: Cargo.toml
poly-bench-traits/src/: config.rs  error_mapping.rs  helper_extractor.rs  hover.rs  lib.rs  lsp_client.rs  measurement.rs  plugin.rs  project.rs  toolchain.rs
runtime-go/: go.mod
runtimes/: README.md
runtimes/runtimes-ts/: Cargo.toml
runtimes/runtimes-ts/src/: builtins.rs  codegen.rs  embedded_diagnostics.rs  error_mapping.rs  helper_extractor.rs  hover.rs  import_extractor.rs  lib.rs  plugin.rs  project.rs  stdlib.rs  transpiler.rs  tsserver_client.rs  v8_runtime.rs  virtual_file.rs
runtimes/runtimes-ts/tests/: execution_snapshot.rs
scripts/: README.md  add-lang.py  bootstrap.sh  dev-build.sh  dev-check.sh  dev-watch.sh  install.sh  languages.toml  prod-build.sh  quick-pr.sh  release-build.sh
src/: init_t3.rs  lib.rs  lsp_main.rs  main.rs  version_check.rs  welcome.rs
test-bubble-init/: README.md  polybench.toml
(+576 files in other folders)
