[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Evan McGrane"]
license = "MIT"
repository = "https://github.com/evanmcgrane/poly-bench"

[workspace.dependencies]
# Internal crates
poly-bench-dsl = { path = "crates/poly-bench-dsl" }
poly-bench-stdlib = { path = "crates/poly-bench-stdlib" }
poly-bench-ir = { path = "crates/poly-bench-ir" }
poly-bench-project = { path = "crates/poly-bench-project" }
poly-bench-runtime = { path = "crates/poly-bench-runtime" }
poly-bench-executor = { path = "crates/poly-bench-executor" }

# Shared dependencies
miette = { version = "7", features = ["fancy"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
colored = "2"
tabled = "0.15"
async-trait = "0.1"
tempfile = "3"
which = "6"
hex = "0.4"
regex = "1"
libloading = "0.8"
tower-lsp = "0.20"
dashmap = "6"
ropey = "1"
once_cell = "1"
futures = "0.3"
pretty_assertions = "1"

[package]
name = "poly-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A high-performance multi-language benchmarking framework with custom DSL"
keywords = ["benchmark", "dsl", "performance", "typescript", "go"]
categories = ["development-tools::profiling", "command-line-utilities"]

[dependencies]
# Internal crates
poly-bench-dsl.workspace = true
poly-bench-stdlib.workspace = true
poly-bench-ir.workspace = true
poly-bench-project.workspace = true
poly-bench-runtime.workspace = true
poly-bench-executor.workspace = true

# CLI
clap.workspace = true
tokio.workspace = true

# Go plugin loading
libloading.workspace = true

# Error handling
thiserror.workspace = true
miette.workspace = true

# Output
colored.workspace = true
tabled.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Async
async-trait.workspace = true

# Misc
tempfile.workspace = true
which.workspace = true
hex.workspace = true
regex.workspace = true

# LSP (Language Server Protocol)
tower-lsp.workspace = true
dashmap.workspace = true
ropey.workspace = true
once_cell.workspace = true

# Gopls integration
futures.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[[bin]]
name = "poly-bench"
path = "src/main.rs"

[[bin]]
name = "poly-bench-lsp"
path = "src/lsp/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
