[workspace]
resolver = "2"
members = ["poly-bench-*", "poly-bench-grammar", "poly-bench-syntax", "poly-bench-lsp-v2"]

[workspace.package]
version = "0.1.11"
edition = "2021"
authors = ["Evan McGrane"]
license = "MIT"
repository = "https://github.com/evm-tooling/poly-bench"

[workspace.dependencies]
# Internal crates
poly-bench-dsl = { path = "poly-bench-dsl" }
poly-bench-stdlib = { path = "poly-bench-stdlib" }
poly-bench-ir = { path = "poly-bench-ir" }
poly-bench-project = { path = "poly-bench-project" }
poly-bench-runtime = { path = "poly-bench-runtime" }
poly-bench-executor = { path = "poly-bench-executor" }
poly-bench-reporter = { path = "poly-bench-reporter" }
poly-bench-lsp-v2 = { path = "poly-bench-lsp-v2" }
poly-bench-syntax = { path = "poly-bench-syntax" }
tree-sitter-polybench = { path = "poly-bench-grammar" }

# Shared dependencies
miette = { version = "7", features = ["fancy"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
colored = "2"
tabled = "0.15"
async-trait = "0.1"
tempfile = "3"
which = "6"
hex = "0.4"
regex = "1"
libloading = "0.8"
tower-lsp = "0.20"
dashmap = "6"
ropey = "1"
once_cell = "1"
futures = "0.3"
indicatif = "0.18"
sha2 = "0.10"
pretty_assertions = "1"
dialoguer = "0.11"
console = "0.15"
ureq = { version = "2", features = ["json", "tls"] }

[package]
name = "poly-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A high-performance multi-language benchmarking framework with custom DSL"
keywords = ["benchmark", "dsl", "performance", "typescript", "go"]
categories = ["development-tools::profiling", "command-line-utilities"]

[dependencies]
# Internal crates
poly-bench-dsl.workspace = true
poly-bench-stdlib.workspace = true
poly-bench-ir.workspace = true
poly-bench-project.workspace = true
poly-bench-runtime.workspace = true
poly-bench-executor.workspace = true
poly-bench-reporter.workspace = true
poly-bench-lsp-v2.workspace = true

# CLI
clap.workspace = true
tokio.workspace = true

# Go plugin loading
libloading.workspace = true

# Error handling
thiserror.workspace = true
miette.workspace = true

# Output
colored.workspace = true
tabled.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Async
async-trait.workspace = true

# Misc
tempfile.workspace = true
which.workspace = true
hex.workspace = true
regex.workspace = true
dialoguer.workspace = true
console.workspace = true
ureq.workspace = true

# LSP (Language Server Protocol)
tower-lsp.workspace = true
dashmap.workspace = true
ropey.workspace = true
once_cell.workspace = true

# Gopls integration
futures.workspace = true

# Progress indicators
indicatif.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[[bin]]
name = "poly-bench"
path = "cli/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0        # keep your code fast to compile
debug = 1            # smaller debug info than full (default is 2)
incremental = true
codegen-units = 64   # more parallel codegen => faster compiles
lto = false

# Compile *dependencies* with optimizations so running is faster,
# but your workspace crates still rebuild quickly.
[profile.dev.package."*"]
opt-level = 3
debug = 0

[profile.dev-fast]
inherits = "dev"
opt-level = 1
debug = 0
codegen-units = 64

[profile.test]
debug = 1
codegen-units = 64