[package]
name = "poly-bench-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark execution orchestration for poly-bench"

[dependencies]
poly-bench-dsl.workspace = true
poly-bench-ir.workspace = true
poly-bench-runtime.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
colored.workspace = true
indicatif.workspace = true
futures.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
