[package]
name = "tree-sitter-polybench"
version = "0.1.0"
edition = "2021"
description = "Tree-sitter grammar for the poly-bench DSL"
license = "MIT"
readme = "README.md"
keywords = ["tree-sitter", "parser", "polybench", "benchmark"]
categories = ["parsing", "text-editors"]

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.22"

[build-dependencies]
cc = "1.0"
poly-bench-dsl.workspace = true
