[package]
name = "poly-bench-lsp-v2"
version.workspace = true
edition.workspace = true
description = "Rewritten LSP server for poly-bench with error-tolerant parsing"
license = "MIT"

[dependencies]
poly-bench-syntax = { path = "../poly-bench-syntax" }
poly-bench-stdlib = { path = "../poly-bench-stdlib" }
tree-sitter-polybench = { path = "../poly-bench-grammar" }
tree-sitter = "0.22"

tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
ropey = "1.6"
dashmap = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "6"
parking_lot = "0.12"
regex = "1"
tempfile = "3"

[dev-dependencies]
tokio-test = "0.4"
