[package]
name = "poly-bench-project"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Project management for poly-bench"

[dependencies]
poly-bench-dsl.workspace = true
poly-bench-runtime.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
colored.workspace = true
indicatif.workspace = true
tempfile.workspace = true
thiserror.workspace = true
which.workspace = true
ureq.workspace = true
flate2 = "1"
zip = "0.6"
tar = "0.4"
