[package]
name = "poly-bench-reporter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Report generation for poly-bench benchmarks"

[dependencies]
poly-bench-dsl.workspace = true
poly-bench-executor.workspace = true
poly-bench-ir.workspace = true
poly-bench-runtime.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
colored.workspace = true
tabled.workspace = true
