[package]
name = "poly-bench-runtime-traits"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Traits and types for poly-bench runtimes"

[dependencies]
linkme = "0.3"
poly-bench-dsl.workspace = true
poly-bench-lsp-traits.workspace = true
poly-bench-ir.workspace = true
poly-bench-ir-traits.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
