[package]
name = "poly-bench-stdlib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Standard library modules for poly-bench DSL"

[dependencies]
poly-bench-dsl.workspace = true
poly-bench-traits.workspace = true

[dev-dependencies]
runtimes-go = { path = "../poly-bench-runtime/runtimes/runtimes-go" }
runtimes-ts = { path = "../poly-bench-runtime/runtimes/runtimes-ts" }
