[package]
name = "poly-bench-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for poly-bench"

[dependencies]
poly-bench-dsl.workspace = true
poly-bench-stdlib.workspace = true
poly-bench-project.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
dashmap.workspace = true
ropey.workspace = true
once_cell.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tempfile.workspace = true
which.workspace = true
miette.workspace = true
