[package]
name = "runtimes-ts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TypeScript runtime for poly-bench"

[dependencies]
poly-bench-dsl = { path = "../../poly-bench-dsl" }
poly-bench-lsp-traits = { path = "../../poly-bench-lsp-traits" }
poly-bench-syntax = { path = "../../poly-bench-syntax" }
poly-bench-ir = { path = "../../poly-bench-ir" }
poly-bench-ir-traits = { path = "../../poly-bench-ir-traits" }
poly-bench-runtime-traits = { path = "../../poly-bench-runtime-traits" }
poly-bench-stdlib = { path = "../../poly-bench-stdlib" }
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
tower-lsp = "0.20"
tracing = "0.1"
which = "6"
once_cell = "1"
regex = "1"
