[package]
name = "runtimes-zig"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Zig runtime for poly-bench"

[dependencies]
linkme = "0.3"
poly-bench-dsl = { path = "../../../poly-bench-dsl" }
poly-bench-traits = { path = "../../../poly-bench-traits" }
poly-bench-syntax = { path = "../../../poly-bench-syntax" }
poly-bench-ir = { path = "../../../poly-bench-ir" }
poly-bench-ir-traits = { path = "../../../poly-bench-ir-traits" }
poly-bench-stdlib = { path = "../../../poly-bench-stdlib" }
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
tracing = "0.1"
which = "6"
once_cell = "1"
regex = "1"
toml = "1.0"
